opam-version: "1.2"
version: "0.1"
maintainer: "christimperley@cs.cmu.edu"
authors: ["cst", "rvt"]
homepage: "https://github.com/squaresLab/rooibosd"
bug-reports: "https://github.com/squaresLab/rooibosd/issues"
dev-repo: "https://github.com/squaresLab/rooibosd.git"
license: "Apache-2.0"
build: [["jbuilder" "build" "-p" name "-j" jobs "@install"]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "core_kernel"
  "rooibos"
  "opium"
  "ounit" {test}
]
